2004-06-02 08:29 Mike Park  <mike.park@nasa.gov>

	* Made 0.7.4 Release. gridmove and CAPRI(CADGeom) work in parallel.

2004-06-01 08:32 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c included edge t in ghost update xfer load and
	set. Face and edge id's and thier counts are now negative to make
	it easier for other objects (gridmove) to load and set arrays.
	* src/gridmove.c excluded negative node id's (faces and edges) in
	load and set.
	* src/grid.c (gridNodeEdgeIdDegree) added for xfer edge. 

2004-05-28 16:11 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c fixed a bug in the load and set routines for
	gm->xyz to fix a parallelization bug. The OM6 adapts!

2004-05-27 11:35 Mike Park  <mike.park@nasa.gov>

	* /src/FAKEGeomExtras.c added CADGeom_GetEdge and CADGeom_EdgeGrid.

2004-05-27 10:55 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelsmoothfaceinterior_) renamed to
	gridparallelsmooth_.
	* src/gridcad.c (gridSmoothFaceInterior) moved to gridmpi
	* src/gridmpi.c (gridParallelSmooth) moved from gridcad

2004-05-27 09:30 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridParallelGeomLoad) added GeomNodes and
	GeomEdges to existing GeomFaces.
	
2004-05-26 15:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c exposed a series of lower level routines to allow
	parallel gridmove projection when called from Fun3D.

2004-05-19 08:35 Mike Park  <mike.park@nasa.gov>

	* src/layer.c (layerTerminateCollidingTriangles) modified to
	expose a sizing for tets used for collision test. Perform test on
	triangles after applying the advance displacement.

2004-05-13 17:00 Mike Park  <mike.park@nasa.gov>

	* configure.ac added Linux ProE wildfire dll build for refine and
	synced up AutoTools with GridEx.
	* src/proemain.c copied a one-off refine main to avoid
	command-line arguments.
	
2004-05-11 11:19 Mike Park  <mike.park@nasa.gov>

	* /src/main.c GridMove object can be used to do projection. envoke